--- a/index.html
+++ b/index.html
@@ -12,7 +12,139 @@
     <div id="container">
       <header>
         <img src="img/netflix.png" alt="">
+        <div class="search">
+          <input type="text" name="" value="">
+          <button type="button" name="button">SEARCH</button>
+        </div>
       </header>
+
+      <main>
+        <div class="movie-poster">
+          <div class="title spacing">
+            <strong>Titolo: </strong>
+            How i met your mother
+          </div>
+          <div class="original-title spacing">
+            <strong>Titolo originale: </strong>
+            How i met your mother
+          </div>
+          <div class="vote spacing">
+            <strong>Voto: </strong>
+          </div>
+          <div class="overview spacing">
+            <strong>Overview: </strong>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam sequi odio in?
+          </div>
+        </div>
+
+        <div class="movie-poster">
+          <div class="title spacing">
+            <strong>Titolo: </strong>
+            How i met your mother
+          </div>
+          <div class="original-title spacing">
+            <strong>Titolo originale: </strong>
+            How i met your mother
+          </div>
+          <div class="vote spacing">
+            <strong>Voto: </strong>
+          </div>
+          <div class="overview spacing">
+            <strong>Overview: </strong>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam sequi odio in?
+          </div>
+        </div>
+
+        <div class="movie-poster">
+          <div class="title spacing">
+            <strong>Titolo: </strong>
+            How i met your mother
+          </div>
+          <div class="original-title spacing">
+            <strong>Titolo originale: </strong>
+            How i met your mother
+          </div>
+          <div class="vote spacing">
+            <strong>Voto: </strong>
+          </div>
+          <div class="overview spacing">
+            <strong>Overview: </strong>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam sequi odio in?
+          </div>
+        </div>
+
+        <div class="movie-poster">
+          <div class="title spacing">
+            <strong>Titolo: </strong>
+            How i met your mother
+          </div>
+          <div class="original-title spacing">
+            <strong>Titolo originale: </strong>
+            How i met your mother
+          </div>
+          <div class="vote spacing">
+            <strong>Voto: </strong>
+          </div>
+          <div class="overview spacing">
+            <strong>Overview: </strong>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam sequi odio in?
+          </div>
+        </div>
+
+        <div class="movie-poster">
+          <div class="title spacing">
+            <strong>Titolo: </strong>
+            How i met your mother
+          </div>
+          <div class="original-title spacing">
+            <strong>Titolo originale: </strong>
+            How i met your mother
+          </div>
+          <div class="vote spacing">
+            <strong>Voto: </strong>
+          </div>
+          <div class="overview spacing">
+            <strong>Overview: </strong>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam sequi odio in?
+          </div>
+        </div>
+
+        <div class="movie-poster">
+          <div class="title spacing">
+            <strong>Titolo: </strong>
+            How i met your mother
+          </div>
+          <div class="original-title spacing">
+            <strong>Titolo originale: </strong>
+            How i met your mother
+          </div>
+          <div class="vote spacing">
+            <strong>Voto: </strong>
+          </div>
+          <div class="overview spacing">
+            <strong>Overview: </strong>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam sequi odio in?
+          </div>
+        </div>
+
+        <div class="movie-poster">
+          <div class="title spacing">
+            <strong>Titolo: </strong>
+            How i met your mother
+          </div>
+          <div class="original-title spacing">
+            <strong>Titolo originale: </strong>
+            How i met your mother
+          </div>
+          <div class="vote spacing">
+            <strong>Voto: </strong>
+          </div>
+          <div class="overview spacing">
+            <strong>Overview: </strong>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam sequi odio in?
+          </div>
+        </div>
+      </main>
     </div>
 
 
