Inizio logica attivazione/disattivazione info

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <meta charset="utf-8">
     <title></title>
@@ -19,131 +21,29 @@
       </header>
 
       <main>
-        <div class="movie-poster">
-          <div class="title spacing">
-            <strong>Titolo: </strong>
-            How i met your mother
-          </div>
-          <div class="original-title spacing">
-            <strong>Titolo originale: </strong>
-            How i met your mother
-          </div>
-          <div class="vote spacing">
-            <strong>Voto: </strong>
-          </div>
-          <div class="overview spacing">
-            <strong>Overview: </strong>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam sequi odio in?
-          </div>
-        </div>
-
-        <div class="movie-poster">
-          <div class="title spacing">
-            <strong>Titolo: </strong>
-            How i met your mother
-          </div>
-          <div class="original-title spacing">
-            <strong>Titolo originale: </strong>
-            How i met your mother
-          </div>
-          <div class="vote spacing">
-            <strong>Voto: </strong>
-          </div>
-          <div class="overview spacing">
-            <strong>Overview: </strong>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam sequi odio in?
+        <div @mouseenter="turnTrue()" @mouseleave="turnFalse" class="movie-poster">
+          <div v-if="mouse" class="informations">
+            <div class="title spacing">
+              <strong>Titolo: </strong>
+              How i met your mother
+            </div>
+            <div class="original-title spacing">
+              <strong>Titolo originale: </strong>
+              How i met your mother
+            </div>
+            <div class="vote spacing">
+              <strong>Voto: </strong>
+            </div>
+            <div class="overview spacing">
+              <strong>Overview: </strong>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam sequi odio in?
+            </div>
           </div>
         </div>
 
-        <div class="movie-poster">
-          <div class="title spacing">
-            <strong>Titolo: </strong>
-            How i met your mother
-          </div>
-          <div class="original-title spacing">
-            <strong>Titolo originale: </strong>
-            How i met your mother
-          </div>
-          <div class="vote spacing">
-            <strong>Voto: </strong>
-          </div>
-          <div class="overview spacing">
-            <strong>Overview: </strong>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam sequi odio in?
-          </div>
-        </div>
 
-        <div class="movie-poster">
-          <div class="title spacing">
-            <strong>Titolo: </strong>
-            How i met your mother
-          </div>
-          <div class="original-title spacing">
-            <strong>Titolo originale: </strong>
-            How i met your mother
-          </div>
-          <div class="vote spacing">
-            <strong>Voto: </strong>
-          </div>
-          <div class="overview spacing">
-            <strong>Overview: </strong>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam sequi odio in?
-          </div>
-        </div>
 
-        <div class="movie-poster">
-          <div class="title spacing">
-            <strong>Titolo: </strong>
-            How i met your mother
-          </div>
-          <div class="original-title spacing">
-            <strong>Titolo originale: </strong>
-            How i met your mother
-          </div>
-          <div class="vote spacing">
-            <strong>Voto: </strong>
-          </div>
-          <div class="overview spacing">
-            <strong>Overview: </strong>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam sequi odio in?
-          </div>
-        </div>
 
-        <div class="movie-poster">
-          <div class="title spacing">
-            <strong>Titolo: </strong>
-            How i met your mother
-          </div>
-          <div class="original-title spacing">
-            <strong>Titolo originale: </strong>
-            How i met your mother
-          </div>
-          <div class="vote spacing">
-            <strong>Voto: </strong>
-          </div>
-          <div class="overview spacing">
-            <strong>Overview: </strong>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam sequi odio in?
-          </div>
-        </div>
-
-        <div class="movie-poster">
-          <div class="title spacing">
-            <strong>Titolo: </strong>
-            How i met your mother
-          </div>
-          <div class="original-title spacing">
-            <strong>Titolo originale: </strong>
-            How i met your mother
-          </div>
-          <div class="vote spacing">
-            <strong>Voto: </strong>
-          </div>
-          <div class="overview spacing">
-            <strong>Overview: </strong>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam sequi odio in?
-          </div>
-        </div>
       </main>
     </div>
 
