Attivazione/disattivazione info con CSS

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
       </header>
 
       <main>
-        <div @mouseenter="turnTrue()" @mouseleave="turnFalse" class="movie-poster">
-          <div v-if="mouse" class="informations">
+        <div class="movie-poster">
+          <div class="informations">
             <div class="title spacing">
               <strong>Titolo: </strong>
               How i met your mother
@@ -41,11 +41,86 @@
           </div>
         </div>
 
+        <div class="movie-poster">
+          <div class="informations">
+            <div class="title spacing">
+              <strong>Titolo: </strong>
+              How i met your mother
+            </div>
+            <div class="original-title spacing">
+              <strong>Titolo originale: </strong>
+              How i met your mother
+            </div>
+            <div class="vote spacing">
+              <strong>Voto: </strong>
+            </div>
+            <div class="overview spacing">
+              <strong>Overview: </strong>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam sequi odio in?
+            </div>
+          </div>
+        </div>
 
+        <div class="movie-poster">
+          <div class="informations">
+            <div class="title spacing">
+              <strong>Titolo: </strong>
+              How i met your mother
+            </div>
+            <div class="original-title spacing">
+              <strong>Titolo originale: </strong>
+              How i met your mother
+            </div>
+            <div class="vote spacing">
+              <strong>Voto: </strong>
+            </div>
+            <div class="overview spacing">
+              <strong>Overview: </strong>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam sequi odio in?
+            </div>
+          </div>
+        </div>
 
+        <div class="movie-poster">
+          <div class="informations">
+            <div class="title spacing">
+              <strong>Titolo: </strong>
+              How i met your mother
+            </div>
+            <div class="original-title spacing">
+              <strong>Titolo originale: </strong>
+              How i met your mother
+            </div>
+            <div class="vote spacing">
+              <strong>Voto: </strong>
+            </div>
+            <div class="overview spacing">
+              <strong>Overview: </strong>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam sequi odio in?
+            </div>
+          </div>
+        </div>
 
+        <div class="movie-poster">
+          <div class="informations">
+            <div class="title spacing">
+              <strong>Titolo: </strong>
+              How i met your mother
+            </div>
+            <div class="original-title spacing">
+              <strong>Titolo originale: </strong>
+              How i met your mother
+            </div>
+            <div class="vote spacing">
+              <strong>Voto: </strong>
+            </div>
+            <div class="overview spacing">
+              <strong>Overview: </strong>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam sequi odio in?
+            </div>
+          </div>
+        </div>
       </main>
-    </div>
 
 
     <script src="js/script.js" charset="utf-8"></script>
