console log del cast

--- a/index.html
+++ b/index.html
@@ -53,6 +53,11 @@
               <i v-for="item in (Math.floor(5 - (vote[index]) / 2))" class="far fa-star"></i>
             </div>
 
+            <div class="cast">
+              <strong>Cast: </strong>
+              <!-- <span v-for="actor in actors[index]">{{ actor }} <br> </span> -->
+            </div>
+
             <div class="overview spacing">
               <strong>Overview: </strong>
               {{ film.overview }}
