--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
       </header>
 
       <main>
-        <div v-if="visible" v-for="(film, index) in films" class="movie-poster" :style="(film.poster_path == null) ? {backgroundImage: 'url(' + notAvailableImage + ')'} : {backgroundImage: 'url(' + initialPath + film.poster_path + ')'}">
+      <h1 class="popular-film" v-if="hide == false && films.length > 3">TOP 3 POPULAR FILMS / SERIES</h1>
+
+      <div class="popular">
+
+        <div v-if="visible" v-for="(film, index) in popularSearch" class="movie-poster" :style="(film.poster_path == null) ? {backgroundImage: 'url(' + notAvailableImage + ')'} : {backgroundImage: 'url(' + initialPath + film.poster_path + ')'}">
 
           <div class="informations">
 
@@ -53,10 +57,16 @@
               <i v-for="item in (Math.floor(5 - (vote[index]) / 2))" class="far fa-star"></i>
             </div>
 
-            <div class="cast">
+            <!-- FACCIO VEDERE IL CAST SOLO DEI PRIMI 4 FILM -->
+            <div class="cast spacing">
               <strong>Cast: </strong>
-              <!-- <span v-for="actor in actors[index]">{{ actor }} <br> </span> -->
+              <span v-for="(actor, i) in actors[index]">{{ actor }} <br> </span>
             </div>
+
+            <!-- <div class="genres spacing">
+              <strong>Generi: </strong>
+              <span v-for="genre in arrayFilmGenre[index]">{{ genre }} <br></span>
+            </div> -->
 
             <div class="overview spacing">
               <strong>Overview: </strong>
@@ -65,6 +75,62 @@
 
           </div>
         </div>
+      </div>
+
+      <h1 class="popular-film" v-if="hide == false && films.length > 3">OTHER FILMS / SERIES</h1>
+
+      <div class="popular">
+
+        <div v-if="visible" v-for="(film, index) in restSearch" class="movie-poster" :style="(film.poster_path == null) ? {backgroundImage: 'url(' + notAvailableImage + ')'} : {backgroundImage: 'url(' + initialPath + film.poster_path + ')'}">
+
+          <div class="informations">
+
+            <div class="title spacing">
+              <strong>Titolo: </strong>
+              {{ film.title }} {{ film.name }}
+            </div>
+
+            <div class="original-title spacing">
+              <strong>Titolo originale: </strong>
+              {{ film.original_title }} {{ film.original_name }}
+            </div>
+
+            <div class="language">
+              <strong>Lingua originale: </strong>
+              <img v-if="film.original_language == 'en'" src="img/america.png" alt="">
+              <img v-else-if="film.original_language == 'it'" src="img/italia2.jpg" alt="">
+              <img v-else-if="film.original_language == 'de'" src="img/germania.jpg" alt="">
+              <span v-else="">{{ film.original_language.toUpperCase() }}</span>
+              <span v-if="film.original_language == ''">N/A</span>
+            </div>
+
+            <div class="vote spacing">
+              <strong>Voto: </strong>
+              <i v-for="item in Math.floor(voteOther[index] / 2)" class="fas fa-star"></i>
+              <i v-if="voteOther[index] % 2 == 1" class="fas fa-star-half-alt"></i>
+              <i v-for="item in (Math.floor(5 - (voteOther[index]) / 2))" class="far fa-star"></i>
+            </div>
+
+            <!-- FACCIO VEDERE IL CAST SOLO DEI PRIMI 5 FILM -->
+            <!-- <div class="cast spacing">
+              <strong>Cast: </strong>
+              <span v-for="(actor, i) in actors[index]">{{ actor }} <br> </span>
+            </div> -->
+
+            <!-- <div class="genres spacing">
+              <strong>Generi: </strong>
+              <span v-for="genre in arrayFilmGenre[index]">{{ genre }} <br></span>
+            </div> -->
+
+            <div class="overview spacing">
+              <strong>Overview: </strong>
+              {{ film.overview }}
+            </div>
+
+          </div>
+        </div>
+      </div>
+
       </main>
     </div>
 
