--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </header>
 
       <main>
-      <h1 class="popular-film" v-if="hide == false && films.length > 3">TOP 3 POPULAR FILMS / SERIES</h1>
+      <h1 class="popular-film" v-if="hide == false && films.length > 1">TOP FILM / SERIE</h1>
 
       <div class="popular">
 
@@ -57,7 +57,7 @@
               <i v-for="item in (Math.floor(5 - (vote[index]) / 2))" class="far fa-star"></i>
             </div>
 
-            <!-- FACCIO VEDERE IL CAST SOLO DEI PRIMI 4 FILM -->
+            <!-- FACCIO VEDERE IL CAST SOLO SUL FILM TOP -->
             <div class="cast spacing">
               <strong>Cast: </strong>
               <span v-for="(actor, i) in actors[index]">{{ actor }} <br> </span>
@@ -77,7 +77,7 @@
         </div>
       </div>
 
-      <h1 class="popular-film" v-if="hide == false && films.length > 3">OTHER FILMS / SERIES</h1>
+      <h1 class="popular-film" v-if="hide == false && films.length > 1">OTHER FILMS / SERIES</h1>
 
       <div class="popular">
 
@@ -111,7 +111,7 @@
               <i v-for="item in (Math.floor(5 - (voteOther[index]) / 2))" class="far fa-star"></i>
             </div>
 
-            <!-- FACCIO VEDERE IL CAST SOLO DEI PRIMI 5 FILM -->
+            <!-- FACCIO VEDERE IL CAST SOLO SUL FILM TOP -->
             <!-- <div class="cast spacing">
               <strong>Cast: </strong>
               <span v-for="(actor, i) in actors[index]">{{ actor }} <br> </span>
