--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <!-- FACCIO VEDERE IL CAST SOLO SUL FILM TOP -->
             <!-- <div class="cast spacing">
               <strong>Cast: </strong>
-              <span v-for="(actor, i) in actors[index]">{{ actor }} <br> </span>
+              <span v-for="(actor, i) in actors[index + 1]">{{ actor }} <br> </span>
             </div> -->
 
             <!-- <div class="genres spacing">
