--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
   </head>
   <body>
-
     <div id="container">
       <header>
         <img src="img/netflix.png" alt="">
@@ -21,14 +20,21 @@
           <button @click="searchFilm()" type="button" name="button"><strong>SEARCH</strong></button>
         </div>
       </header>
-
       <main>
-      <h1 class="popular-film" v-if="hide == false && films.length > 1">TOP FILM / SERIE</h1>
+
+      <h1 class="popular-film" v-if="hide == false && films.length > 3">
+        TOP 3 FILMS / SERIES FOR "{{resultFor.toUpperCase()}}"
+      </h1>
+
+      <h1 class="popular-film" v-else-if="hide == false && films.length <= 3">
+        RESULTS FOR "{{resultFor.toUpperCase()}}"
+      </h1>
+      <h1 class="popular-film" v-if="hide == false && films.length == 0">
+        No results
+      </h1>
 
       <div class="popular">
-
         <div v-if="visible" v-for="(film, index) in popularSearch" class="movie-poster" :style="(film.poster_path == null) ? {backgroundImage: 'url(' + notAvailableImage + ')'} : {backgroundImage: 'url(' + initialPath + film.poster_path + ')'}">
-
           <div class="informations">
 
             <div class="title spacing">
@@ -46,8 +52,12 @@
               <img v-if="film.original_language == 'en'" src="img/america.png" alt="">
               <img v-else-if="film.original_language == 'it'" src="img/italia2.jpg" alt="">
               <img v-else-if="film.original_language == 'de'" src="img/germania.jpg" alt="">
-              <span v-else="">{{ film.original_language.toUpperCase() }}</span>
-              <span v-if="film.original_language == ''">N/A</span>
+              <span v-else="">
+                {{ film.original_language.toUpperCase() }}
+              </span>
+              <span v-if="film.original_language == ''">
+                N/A
+              </span>
             </div>
 
             <div class="vote spacing">
@@ -57,10 +67,11 @@
               <i v-for="item in (Math.floor(5 - (vote[index]) / 2))" class="far fa-star"></i>
             </div>
 
-            <!-- FACCIO VEDERE IL CAST SOLO SUL FILM TOP -->
             <div class="cast spacing">
               <strong>Cast: </strong>
-              <span v-for="(actor, i) in actors[index]">{{ actor }} <br> </span>
+              <span v-for="cast in films[index].cast">
+                {{ cast }} <br>
+              </span>
             </div>
 
             <!-- <div class="genres spacing">
@@ -72,17 +83,16 @@
               <strong>Overview: </strong>
               {{ film.overview }}
             </div>
-
           </div>
         </div>
       </div>
 
-      <h1 class="popular-film" v-if="hide == false && films.length > 1">OTHER FILMS / SERIES</h1>
+      <h1 class="popular-film" v-if="hide == false && films.length > 3">
+        OTHER FILMS / SERIES FOR "{{resultFor.toUpperCase()}}"
+      </h1>
 
       <div class="popular">
-
         <div v-if="visible" v-for="(film, index) in restSearch" class="movie-poster" :style="(film.poster_path == null) ? {backgroundImage: 'url(' + notAvailableImage + ')'} : {backgroundImage: 'url(' + initialPath + film.poster_path + ')'}">
-
           <div class="informations">
 
             <div class="title spacing">
@@ -100,8 +110,12 @@
               <img v-if="film.original_language == 'en'" src="img/america.png" alt="">
               <img v-else-if="film.original_language == 'it'" src="img/italia2.jpg" alt="">
               <img v-else-if="film.original_language == 'de'" src="img/germania.jpg" alt="">
-              <span v-else="">{{ film.original_language.toUpperCase() }}</span>
-              <span v-if="film.original_language == ''">N/A</span>
+              <span v-else="">
+                {{ film.original_language.toUpperCase() }}
+              </span>
+              <span v-if="film.original_language == ''">
+                N/A
+              </span>
             </div>
 
             <div class="vote spacing">
@@ -111,30 +125,27 @@
               <i v-for="item in (Math.floor(5 - (voteOther[index]) / 2))" class="far fa-star"></i>
             </div>
 
-            <!-- FACCIO VEDERE IL CAST SOLO SUL FILM TOP -->
-            <!-- <div class="cast spacing">
+            <div class="cast spacing">
               <strong>Cast: </strong>
-              <span v-for="(actor, i) in actors[index + 1]">{{ actor }} <br> </span>
-            </div> -->
+              <span v-for="cast in films[index + 1].cast">
+                {{ cast }} <br>
+              </span>
+            </div>
 
             <!-- <div class="genres spacing">
               <strong>Generi: </strong>
               <span v-for="genre in arrayFilmGenre[index]">{{ genre }} <br></span>
             </div> -->
-
+            
             <div class="overview spacing">
               <strong>Overview: </strong>
               {{ film.overview }}
             </div>
-
           </div>
         </div>
       </div>
-
       </main>
     </div>
-
-
     <script src="js/script.js" charset="utf-8"></script>
   </body>
 </html>
